# hatch-msgfmt

./: LICENSE  README.md  pyproject.toml
src/hatch_msgfmt/: hooks.py  msgfmt.py  plugin.py  tempfile.py
