[project]
name = 'hatch-msgfmt'
version = '1.0.1'
description = 'Msgfmt build hook, replacing all po with mo in build'
license = {text = 'MIT'}
readme = 'README.md'
requires-python= '>=3.7'
dependencies = [
  'hatchling',
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Programming Language :: Python :: 3',
  'Framework :: Hatch',
]


[[project.authors]]
name = 'Taylor C. Richberger'
email = 'tcr@absolute-performance.com'

[[project.maintainers]]
name = 'Taylor C. Richberger'
email = 'tcr@absolute-performance.com'

[project.urls]
repository = 'https://github.com/absperf/hatch-msgfmt'

[project.entry-points.hatch]
msgfmt = 'hatch_msgfmt.hooks'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
